--- a/client/app/components/featureOverview/featureOverview.component.css
+++ b/client/app/components/featureOverview/featureOverview.component.css
@@ -4,14 +4,14 @@ th {
 .notsortable {
   background-color:rgba(0,0,255,0.5);
 }
-.pass {
+.passed {
   background-color:rgba(0,255,0,0.5);
 }
-.fail {
+.failed {
   background-color:rgba(255,0,0,10);
 }
 
-.skip {
+.skipped {
   background-color:rgba(0,0,255,0.3);
 }
 
