--- a/client/app/components/runInfoTable/run-info-table.component.css
+++ b/client/app/components/runInfoTable/run-info-table.component.css
@@ -7,9 +7,9 @@
 .notsortable {
   background-color:rgba(0,0,255,0.5);
 }
-.pass {
+.passed {
   background-color:rgba(0,255,0,0.5);
 }
-.fail {
+.failed {
   background-color:rgba(255,0,0,10);
 }
