--- a/client/app/components/feature/feature.component.css
+++ b/client/app/components/feature/feature.component.css
@@ -1,14 +1,14 @@
 .notsortable {
   background-color:rgba(0,0,255,0.5);
 }
-.pass {
+.passed {
   background-color:rgba(0,255,0,0.5);
 }
-.fail {
+.failed {
   background-color:rgba(255,0,0,10);
 }
 
-.skip {
+.skipped {
   background-color:rgba(0,0,255,0.3);
 }
 
@@ -18,4 +18,11 @@
 
 .undefined {
   background-color:rgba(255,0,0,0.5);
+}
+.elements.indentation {
+  padding-top: 5px;
+  padding-left: 2cm;
+}
+.element {
+  padding-top: 5px;
 }
